refactor(): Убрал использование stream.Collectors